# relz_fs

./: .gitignore  CMakeLists.txt  Makefile  README.md  daemon_fuse.config  daemon_fuse_client.config  daemon_fuse_local.config
data/: reads_cut.fa  ref.txt  ref16.txt  seq.txt  seq16.txt  tair10_cut.fa  thaliana_cut.fa
include/: BlockHeaders.h  BlockHeadersFactory.h  BytesReader.h  ClientReception.h  CoderBlocks.h  CoderBlocksRelz.h  Compressor.h  CompressorSingleBuffer.h  ConcurrentLogger.h  Configuration.h  DecoderBlocksCompact.h  DecoderBlocksRelz.h  DecoderBlocksRelzBytes.h  FilesTree.h  LengthsCoderBlocks.h  LengthsCoderBlocksBytes.h  MetadataFasta.h  MutationsFile.h  PositionsCoderBlocks.h  RecoderBlocks.h  Recompressor.h  ReferenceFactory.h  ReferenceIndex.h  ReferenceIndexBasic.h  ReferenceIndexBasicTest.h  ReferenceIndexRR.h  RelzIndexPrimary.h  RelzIndexSecondary.h  RemoteFunctions.h  ServerThreads.h  TextFilter.h  TextFilterBasic.h  TextFilterFull.h  TextFilterNoNL.h  dirList.h
includes/: BitsUtils.h  BlockHeaders.h  BlockHeadersFactory.h  BlockHeadersRelz.h  CheckUser.h  CommunicationUtils.h  Communicator.h  CompactSequence.h  ComparatorUtils.h  CompressorSingleBuffer.h  DecoderBlocks.h  DecoderBlocksRelz.h  LinearPatternMatching.h  LocalBuffer.h  Metadata.h  NanoTimer.h  PositionsCoderBlocksBytes.h  README.txt  ReferenceIndex.h  ReferenceIndexBasic.h  ReferenceIndexRR.h  ReferenceIndexRRCompact.h  ServerConnection.h  ServerThreads.h  TextFilter.h
lib/: README.txt
logs/: README.txt
programs/: build_reference.cpp  compress.cpp  compress_rr.cpp  construccion_lz_blocks.cpp  daemon_fuse_client.cpp  daemon_fuse_hybrid.cpp  daemon_server.cpp  decompress.cpp  demonio_fuse_cliente.cpp  server.cpp  (+10 more)
(+77 files in other folders)
